deploy: 4dbf2410d464e1622c252dd859ddef222d418893

--- a/about/index.html
+++ b/about/index.html
@@ -273,7 +273,11 @@
 
       <section class="page__content e-content" itemprop="text">
         
-        <p>About me</p>
+        <p>Hi my name is 0xE0-rng and this is my attempt of publishing the projects that take up my free time.</p>
+
+<p>I am currently working in London as a Penetration Tester with alot of experience in mobile security, but I am always learning and have too many interests for my own good.</p>
+
+<p>You can find me on mastodon as @0xE0_rng@infosec.exchange.</p>
 
         
       </section>
