--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <meta property="og:locale" content="en_US">
 <meta property="og:site_name" content="A Glorified Notebook">
 <meta property="og:title" content="A Glorified Notebook">
-<meta property="og:url" content="https://0xe-rng.net/_pages/home/">
+<meta property="og:url" content="https://0xe-rng.net/">
 
 
   <meta property="og:description" content="A blog on security topics">
@@ -30,7 +30,7 @@
   <meta name="twitter:site" content="@0xE-rng">
   <meta name="twitter:title" content="A Glorified Notebook">
   <meta name="twitter:description" content="A blog on security topics">
-  <meta name="twitter:url" content="https://0xe-rng.net/_pages/home/">
+  <meta name="twitter:url" content="https://0xe-rng.net/">
 
   
     <meta name="twitter:card" content="summary">
@@ -46,10 +46,20 @@
 
 
 
-<link rel="canonical" href="https://0xe-rng.net/_pages/home/">
+<link rel="canonical" href="https://0xe-rng.net/">
 
 
 
+
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Person",
+    "name": "Your Name",
+    "url": "https://0xe-rng.net/"
+}
+</script>
 
 
 
@@ -258,7 +268,7 @@
     
       <h1 id="page-title" class="page__title"></h1>
     
-    <p>Welcome Home</p>
+    <p>Welcome to my mini blog :)</p>
 
 
 <h3 class="archive__subtitle">Recent posts</h3>
