--- a/hid_bruteforcing/index.html
+++ b/hid_bruteforcing/index.html
@@ -82,11 +82,7 @@
 
 
 
-    <!-- start custom head snippets -->
-
-<!-- insert favicons. use https://realfavicongenerator.net/ -->
-
-<!-- end custom head snippets -->
+    <link rel="icon" href="/assets/images/favicon.svg" type="image/svg+xml" />
 
   </head>
 
@@ -360,17 +356,17 @@ byte2 = deltaY                     # y movement  -"-
 <p>We should now see the mouse move by 10 units in the x direction on the host device.</p>
 
 <h2 id="introducing-patternbash">Introducing PatternBash</h2>
-<p>So what can we do with this knowledge? Inspired by the <strong>Android Pin Bruteforcing Project</strong><sup id="fnref:pin-bruteforce-repo"><a href="#fn:pin-bruteforce-repo" class="footnote" rel="footnote" role="doc-noteref">7</a></sup>, I have created a bash script that will bruteforce the pattern lock on an Android device.</p>
+<p>So what can we do with this knowledge? Inspired by the <em>Android Pin Bruteforcing Project</em><sup id="fnref:pin-bruteforce-repo"><a href="#fn:pin-bruteforce-repo" class="footnote" rel="footnote" role="doc-noteref">7</a></sup>, I have created a bash script that will bruteforce the pattern lock on an Android device. I called it <strong>PatternBash</strong> and it is available on its dedicated repo here <sup id="fnref:patternbash-repo"><a href="#fn:patternbash-repo" class="footnote" rel="footnote" role="doc-noteref">8</a></sup>.</p>
 
 <p>The problem with bruteforcing is the timeout between failed attempts grows exponentially. However, for the tablet in question (and many other devices), we can actually factory reset the device again, which will reset the timeout every time we do.
-This is an issue that in a different form also existed on iPhones, which made bruteforcing PINs feasible for a while there too<sup id="fnref:iphone-brute"><a href="#fn:iphone-brute" class="footnote" rel="footnote" role="doc-noteref">8</a></sup>.</p>
+This is an issue that in a different form also existed on iPhones, which made bruteforcing PINs feasible for a while there too<sup id="fnref:iphone-brute"><a href="#fn:iphone-brute" class="footnote" rel="footnote" role="doc-noteref">9</a></sup>.</p>
 
 <h3 id="features">Features</h3>
 <p>PatternBash tool has the following features:</p>
 <ul>
   <li>A resume function that allows you to pick up between attempts</li>
-  <li>A list of Android patterns based on the distance between the pattern points, which is available here on its dedicated repo on GitHub <sup id="fnref:all-pattern-repo"><a href="#fn:all-pattern-repo" class="footnote" rel="footnote" role="doc-noteref">9</a></sup></li>
-  <li>A tool to create optimized bruteforce patterns based on the paper <sup id="fnref:pattern-frequency"><a href="#fn:pattern-frequency" class="footnote" rel="footnote" role="doc-noteref">10</a></sup></li>
+  <li>A list of Android patterns based on the distance between the pattern points, which is available here on its dedicated repo on GitHub <sup id="fnref:all-pattern-repo"><a href="#fn:all-pattern-repo" class="footnote" rel="footnote" role="doc-noteref">10</a></sup></li>
+  <li>A tool to create optimized bruteforce patterns based on the paper <sup id="fnref:pattern-frequency"><a href="#fn:pattern-frequency" class="footnote" rel="footnote" role="doc-noteref">11</a></sup></li>
   <li>An installer script to just push and run the APK</li>
   <li>A usage menu to set up the location of the dots on the screen</li>
   <li>A backup and resume feature to pause the bruteforcing</li>
@@ -438,6 +434,9 @@ Unfortunately, this was also unsuccessful, so my only fix was to go slower and l
     </li>
     <li id="fn:pin-bruteforce-repo">
       <p><a href="https://github.com/urbanadventurer/Android-PIN-Bruteforce">The Android PIN Bruteforce Github Repo</a> <a href="#fnref:pin-bruteforce-repo" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
+    </li>
+    <li id="fn:patternbash-repo">
+      <p><a href="https://github.com/0xE0-rng/PatternBash">PatternBash Github Repo</a> <a href="#fnref:patternbash-repo" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
     </li>
     <li id="fn:iphone-brute">
       <p><a href="https://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2014-4451">Mitre CVE-2014-4451</a> <a href="#fnref:iphone-brute" class="reversefootnote" role="doc-backlink">&#8617;</a></p>
