--- a/index.html
+++ b/index.html
@@ -88,11 +88,7 @@
 
 
 
-    <!-- start custom head snippets -->
-
-<!-- insert favicons. use https://realfavicongenerator.net/ -->
-
-<!-- end custom head snippets -->
+    <link rel="icon" href="/assets/images/favicon.svg" type="image/svg+xml" />
 
   </head>
 
